# hackchallenge-hack-the-truck

./: README.md
datatypes/: README.md  header.proto
datatypes/Applications/Truck/: W3Lightbar.proto
datatypes/HMI/: CanButton.proto  HMICanKeyboard.proto
datatypes/SensorNearData/: BaseImage.proto  Brake.proto  SensorStates.proto  VehicleDynamics.proto
datatypes/SensorNearData/SurroundViewImage/: SurroundViewImage.proto
datatypes/VehicleMovement/: GlobalPosEst.proto
datatypes_python/: header_pb2.py
datatypes_python/Applications/Truck/: W3Lightbar_pb2.py
datatypes_python/HMI/: CanButton_pb2.py  HMICanKeyboard_pb2.py
datatypes_python/SensorNearData/: BaseImage_pb2.py  Brake_pb2.py  SensorStates_pb2.py  VehicleDynamics_pb2.py
datatypes_python/SensorNearData/SurroundViewImage/: SurroundViewImage_pb2.py
datatypes_python/VehicleMovement/: GlobalPosEst_pb2.py
onepager/: bcx_onepager_A3_ecal.pptx
samples/c++/camera/: CMakeLists.txt  CMakeWindows.bat  Readme.md  all_subscribers.h  image_widget.cpp  image_widget.h  main.cpp
samples/c++/camera/test/: main.cpp  main_ssd.cpp  main_yolo.cpp
samples/python/camera/: camera.py
samples/python/lightbar/: Readme.md  w3_lightbar_demo.py
tests/: W3Lightbar_pb2.py
